--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "gitignore": "^0.6.0",
-    "html": "^1.0.0"
+    "html": "^1.0.0",
+    "nodemailer": "^6.6.1"
   }
 }
