--- a/package.json
+++ b/package.json
@@ -4,5 +4,23 @@
     "gitignore": "^0.6.0",
     "html": "^1.0.0",
     "nodemailer": "^6.6.1"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "progetto_esame",
+  "description": "Progetto Esame Roggia-Lingua",
+  "version": "1.0.0",
+  "main": "server.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Samuelelingua02/Progetto_Esame.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Samuelelingua02/Progetto_Esame/issues"
+  },
+  "homepage": "https://github.com/Samuelelingua02/Progetto_Esame#readme"
 }
