--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "gitignore": "^0.6.0",
     "google-auth-library": "^7.1.0",
     "html": "^1.0.0",
+    "https": "^1.0.0",
+    "mongodb": "^3.6.9",
     "nodemailer": "^6.6.1"
   },
   "scripts": {
