--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "errors": "^0.3.0",
+    "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "gitignore": "^0.6.0",
     "google-auth-library": "^7.1.0",
     "html": "^1.0.0",
     "https": "^1.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.9",
     "nodemailer": "^6.6.1"
   },
