--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "bootstrap": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "errors": "^0.3.0",
     "express": "^4.17.1",
