--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "google-auth-library": "^7.1.0",
     "html": "^1.0.0",
     "https": "^1.0.0",
+    "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.9",
     "nodemailer": "^6.6.1"
